// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IsolateForm /> should render with source types restricted 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Modal__ModalBody>
    <Form__IsolateFormFields>
      <SourceType
        allowedSourceTypes={
          Array [
            "isolate",
            "genotype",
          ]
        }
        onChange={[Function]}
        restrictSourceTypes={true}
        value="isolate"
      />
      <InputGroup>
        <Input__InputLabel>
          Source Name
        </Input__InputLabel>
        <Input
          disabled={false}
          onChange={[Function]}
          value="A"
        />
      </InputGroup>
    </Form__IsolateFormFields>
    <InputGroup>
      <Input__InputLabel>
        Isolate Name
      </Input__InputLabel>
      <Input
        readOnly={true}
        value="Isolate A"
      />
    </InputGroup>
  </Modal__ModalBody>
  <Modal__ModalFooter>
    <SaveButton />
  </Modal__ModalFooter>
</form>
`;

exports[`<IsolateForm /> should render with source types unrestricted 1`] = `
<form
  onSubmit={[MockFunction]}
>
  <Modal__ModalBody>
    <Form__IsolateFormFields>
      <SourceType
        allowedSourceTypes={
          Array [
            "isolate",
            "genotype",
          ]
        }
        onChange={[Function]}
        restrictSourceTypes={false}
        value="isolate"
      />
      <InputGroup>
        <Input__InputLabel>
          Source Name
        </Input__InputLabel>
        <Input
          disabled={false}
          onChange={[Function]}
          value="A"
        />
      </InputGroup>
    </Form__IsolateFormFields>
    <InputGroup>
      <Input__InputLabel>
        Isolate Name
      </Input__InputLabel>
      <Input
        readOnly={true}
        value="Isolate A"
      />
    </InputGroup>
  </Modal__ModalBody>
  <Modal__ModalFooter>
    <SaveButton />
  </Modal__ModalFooter>
</form>
`;
